Add JWT auth, user-scoped connections, and login/register UI
- Backend: introduce Spring Security with JWT (AuthController, JwtService,
  SecurityConfig, CurrentUser); persist users and DB connections via JPA
  (User/DbConnection entities, repositories, Flyway migration).
- Replace file-based ConnectionFileManager with ConnectionService backed
  by the database, scoped per authenticated user; expose ConnectionView
  DTO that hides stored passwords.
- Add AuthException/ConflictException and global handler entries for 401/409.
- Frontend: new auth API/store, LoginPage/RegisterPage, token attached to
  the Axios client; Header shows the signed-in user with logout; Sidebar
  surfaces connection-level status, comments, and richer error handling.

Co-Authored-By: Claude <noreply@anthropic.com>